--- a/prepare_datasets/FineFake/process_dataset.ipynb
+++ b/prepare_datasets/FineFake/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +57,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.drop(columns=[\"image_path\",\n",
+    "                 \"topic\", #TODO: Add in future\n",
     "                 \"entity_id\",\n",
-    "                 \"topic\",\n",
     "                 \"fine-grained label\",\n",
     "                 \"knowledge_embedding\",\n",
     "                 \"description\",\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,12 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.to_csv(\"../../datasets/FineFake/real.csv\", sep=\",\", index=False)\n",
-    "fake_df.to_csv(\"../../datasets/FineFake/fake.csv\", sep=\",\", index=False)"
+    "real_df.to_parquet(\"../../datasets/FineFake/real.parquet\", index=False)\n",
+    "fake_df.to_parquet(\"../../datasets/FineFake/fake.parquet\", index=False)"
    ]
   }
  ],
