--- a/prepare_datasets/LIAR2/process_dataset.ipynb
+++ b/prepare_datasets/LIAR2/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=[\"date\", \n",
-    "                 \"subject\", \n",
+    "df.drop(columns=[\"id\",\n",
+    "                \"date\",\n",
+    "                 \"speaker\", \n",
+    "                 \"subject\",\n",
     "                 \"speaker_description\", \n",
     "                 \"state_info\", \n",
     "                 \"true_counts\", \n",
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -86,10 +88,8 @@
      "output_type": "stream",
      "text": [
       "Missing values per column:\n",
-      "id           0\n",
       "label        0\n",
       "statement    0\n",
-      "speaker      0\n",
       "dtype: int64\n",
       "\n",
       "Total missing values in DataFrame: 0\n",
@@ -120,11 +120,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "df[\"label\"] = df['label'].map(lambda x: 0 if x >= 3 else 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(columns={\"statement\": \"text\"}, inplace=True)"
    ]
   },
   {
@@ -136,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,12 +162,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.to_csv(\"../../datasets/LIAR2/real.csv\", sep=\",\", index=False)\n",
-    "fake_df.to_csv(\"../../datasets/LIAR2/fake.csv\", sep=\",\", index=False)"
+    "real_df.to_parquet(\"../../datasets/LIAR2/real.parquet\", index=False)\n",
+    "fake_df.to_parquet(\"../../datasets/LIAR2/fake.parquet\", index=False)"
    ]
   }
  ],
