--- a/prepare_datasets/Climate-FEVER/process_dataset.ipynb
+++ b/prepare_datasets/Climate-FEVER/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -104,12 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "df[\"label\"] = df[\"claim_label\"].map(lambda x: 1 if x in [1, 3] else 0)\n",
     "df.drop(columns=[\"claim_label\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(columns={\"claim\": \"text\"}, inplace=True)"
    ]
   },
   {
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,12 +147,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.to_csv(\"../../datasets/Climate-FEVER/real.csv\", sep=\",\", index=False)\n",
-    "fake_df.to_csv(\"../../datasets/Climate-FEVER/fake.csv\", sep=\",\", index=False)"
+    "real_df.to_parquet(\"../../datasets/Climate-FEVER/real.parquet\", index=False)\n",
+    "fake_df.to_parquet(\"../../datasets/Climate-FEVER/fake.parquet\", index=False)"
    ]
   }
  ],
