--- a/prepare_datasets/Fake News Corpus/process_dataset.ipynb
+++ b/prepare_datasets/Fake News Corpus/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -104,12 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "df[\"label\"] = df[\"type\"].apply(lambda x: 0 if x == \"reliable\" else 1)\n",
     "df.drop(columns=[\"type\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = combine_text_columns(df, [\"title\", \"content\"])"
    ]
   },
   {
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,12 +147,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.to_csv(\"../../datasets/Fake News Corpus/real.csv\", sep=\",\", index=False)\n",
-    "fake_df.to_csv(\"../../datasets/Fake News Corpus/fake.csv\", sep=\",\", index=False)"
+    "real_df.to_parquet(\"../../datasets/Fake News Corpus/real.parquet\", index=False)\n",
+    "fake_df.to_parquet(\"../../datasets/Fake News Corpus/fake.parquet\", index=False)"
    ]
   }
  ],
