--- a/prepare_datasets/Fake News Prediction/process_dataset.ipynb
+++ b/prepare_datasets/Fake News Prediction/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -91,11 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "df[\"label\"] = df[\"label\"].apply(lambda x: 0 if x == \"REAL\" else 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = combine_text_columns(df, [\"title\", \"text\"])"
    ]
   },
   {
@@ -107,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,12 +133,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.to_csv(\"../../datasets/Fake News Prediction/real.csv\", sep=\",\", index=False)\n",
-    "fake_df.to_csv(\"../../datasets/Fake News Prediction/fake.csv\", sep=\",\", index=False)"
+    "real_df.to_parquet(\"../../datasets/Fake News Prediction/real.parquet\", index=False)\n",
+    "fake_df.to_parquet(\"../../datasets/Fake News Prediction/fake.parquet\", index=False)"
    ]
   }
  ],
