--- a/prepare_datasets/ISOT Fake News/process_dataset.ipynb
+++ b/prepare_datasets/ISOT Fake News/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=[\"date\", \"subject\"], axis=1, inplace=True)"
+    "df.drop(columns=[\"date\", \"subject\"], axis=1, inplace=True) #TODO Add subject in future"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = combine_text_columns(df, [\"title\", \"text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,12 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.to_csv(\"../../datasets/ISOT Fake News/real.csv\", sep=\",\", index=False)\n",
-    "fake_df.to_csv(\"../../datasets/ISOT Fake News/fake.csv\", sep=\",\", index=False)"
+    "real_df.to_parquet(\"../../datasets/ISOT Fake News/real.parquet\", index=False)\n",
+    "fake_df.to_parquet(\"../../datasets/ISOT Fake News/fake.parquet\", index=False)"
    ]
   }
  ],
