Migration to .parquet files

--- a/prepare_datasets/Climate-FEVER/make_dataset.ipynb
+++ b/prepare_datasets/Climate-FEVER/make_dataset.ipynb
@@ -13,7 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load in Datasets"
+    "## Load in Datasets\n",
+    "Dataset: https://huggingface.co/datasets/tdiggelm/climate_fever"
    ]
   },
   {
@@ -34,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"Climate-FEVER.csv\", sep=\",\", index=False)"
+    "df.to_parquet(\"Climate-FEVER.parquet\", index=False)"
    ]
   }
  ],
