--- a/prepare_datasets/Fake News Corpus/make_dataset.ipynb
+++ b/prepare_datasets/Fake News Corpus/make_dataset.ipynb
@@ -13,7 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load in Dataset"
+    "## Load in Dataset\n",
+    "Dataset: https://github.com/several27/FakeNewsCorpus?tab=readme-ov-file"
    ]
   },
   {
@@ -82,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined_df.to_csv(\"FakeNewsCorpus.csv\", sep=\",\", index=False)"
+    "combined_df.to_parquet(\"FakeNewsCorpus.parquet\", sep=\",\", index=False)"
    ]
   }
  ],
