--- a/prepare_datasets/Fakeddit/make_dataset.ipynb
+++ b/prepare_datasets/Fakeddit/make_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load in data\n",
-    "Dataset: https://www.kaggle.com/datasets/csmalarkodi/isot-fake-news-dataset"
+    "## Load in Datasets\n",
+    "Dataset: https://fakeddit.netlify.app"
    ]
   },
   {
@@ -23,8 +23,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df = pd.read_csv(\"raw_true.csv\")\n",
-    "fake_df = pd.read_csv(\"raw_fake.csv\")"
+    "df = pd.read_csv(\"all_train.tsv\", sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export  Dataset"
    ]
   },
   {
@@ -33,40 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df[\"label\"] = 0\n",
-    "fake_df[\"label\"] = 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Combine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.concat([real_df, fake_df], ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Export Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_parquet(\"ISOT Fake News.parquet\", index=False)"
+    "df.to_parquet(\"Fakeddit.parquet\", index=False)"
    ]
   }
  ],
