--- a/prepare_datasets/LIAR2/make_dataset.ipynb
+++ b/prepare_datasets/LIAR2/make_dataset.ipynb
@@ -13,12 +13,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load in Datasets"
+    "## Load in Datasets\n",
+    "Datasets: https://huggingface.co/datasets/chengxuphd/liar2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,11 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined_df.to_csv(\"LIAR2.csv\", sep=\",\", index=False)"
+    "combined_df.to_parquet(\"LIAR2.parquet\", index=False)"
    ]
   }
  ],
