--- a/prepare_datasets/llm-misinformation/make_dataset.ipynb
+++ b/prepare_datasets/llm-misinformation/make_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load in data"
+    "## Load in data\n",
+    "Dataset: https://github.com/llm-misinformation/llm-misinformation"
    ]
   },
   {
@@ -23,6 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dataset consists of many single datasets. Download as many as you like and put them in a folder called 'single_datasets'. See Google Drive for my list: https://drive.google.com/drive/folders/1yRudLthZg8OV-LAGlLVh-T9lSFkFjFbC?usp=share_link\n",
     "data = [f for f in os.listdir(\"single_datasets\") if f.endswith('.csv')]"
    ]
   },
@@ -85,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"llm-misinformation.csv\", sep=\",\", index=False)"
+    "df.to_parquet(\"llm-misinformation.parquet\", index=False)"
    ]
   }
  ],
