--- a/prepare_datasets/Fake News Prediction/make_dataset.ipynb
+++ b/prepare_datasets/Fake News Prediction/make_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,35 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load in data\n",
-    "Dataset: https://www.kaggle.com/datasets/csmalarkodi/isot-fake-news-dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "real_df = pd.read_csv(\"raw_true.csv\")\n",
-    "fake_df = pd.read_csv(\"raw_fake.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "real_df[\"label\"] = 0\n",
-    "fake_df[\"label\"] = 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Combine"
+    "## Load in Datasets\n",
+    "Dataset: https://www.kaggle.com/datasets/rajatkumar30/fake-news"
    ]
   },
   {
@@ -50,23 +23,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([real_df, fake_df], ignore_index=True)"
+    "df = pd.read_csv(\"news.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Export Dataset"
+    "## Export  Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_parquet(\"ISOT Fake News.parquet\", index=False)"
+    "df.to_parquet(\"Fake News Prediction.parquet\", index=False)"
    ]
   }
  ],
