--- a/prepare_datasets/FineFake/process_dataset.ipynb
+++ b/prepare_datasets/FineFake/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_pickle(\"FineFake.pkl\")"
+    "df = pd.read_parquet(\"FineFake.parquet\")"
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,11 +65,9 @@
     "                 \"topic\", #TODO: Add in future\n",
     "                 \"entity_id\",\n",
     "                 \"fine-grained label\",\n",
-    "                 \"knowledge_embedding\",\n",
     "                 \"description\",\n",
     "                 \"relation\",\n",
     "                 \"platform\",\n",
-    "                 \"author\",\n",
     "                 \"date\",\n",
     "                 \"comment\"],\n",
     "        axis=1, inplace=True)"
@@ -77,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
