--- a/prepare_datasets/ISOT Fake News/process_dataset.ipynb
+++ b/prepare_datasets/ISOT Fake News/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"ISOT Fake News.csv\")"
+    "df = pd.read_parquet(\"ISOT Fake News.parquet\")"
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
