--- a/prepare_datasets/WELFake/make_dataset.ipynb
+++ b/prepare_datasets/WELFake/make_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,60 +13,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load in data\n",
-    "Dataset: https://www.kaggle.com/datasets/csmalarkodi/isot-fake-news-dataset"
+    "## Load in Datasets\n",
+    "Dataset: https://www.kaggle.com/datasets/saurabhshahane/fake-news-classification"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df = pd.read_csv(\"raw_true.csv\")\n",
-    "fake_df = pd.read_csv(\"raw_fake.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "real_df[\"label\"] = 0\n",
-    "fake_df[\"label\"] = 1"
+    "df = pd.read_csv(\"WELFake_Dataset.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Combine"
+    "## Export  Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([real_df, fake_df], ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Export Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_parquet(\"ISOT Fake News.parquet\", index=False)"
+    "df.to_parquet(\"WELFake.parquet\", index=False)"
    ]
   }
  ],
