Downlaod processed data

--- a/pipeline/pipeline.ipynb
+++ b/pipeline/pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -18,9 +18,9 @@
      "text": [
       "read_dataset()\n",
       "read_all_datasets()\n",
+      "read_processed_data()\n",
       "combine_text_columns()\n",
-      "split_data()\n",
-      "extract_data()\n",
+      "split_train_test()\n",
       "evaluate_model()\n",
       "detect_missing_values()\n"
      ]
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,13 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = read_all_datasets()\n",
     "\n",
-    "data = data.head(10_000)"
+    "data = data.head(10)"
    ]
   },
   {
@@ -138,9 +138,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a935c0f06f934baba969571152686b6e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if config[\"augmentation\"][\"synonym_replacement\"][\"enabled\"]:\n",
     "    n_samples = int(max(config[\"augmentation\"][\"synonym_replacement\"][\"n_samples\"] * len(data), 1))\n",
@@ -171,9 +186,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c93eac687da94b938fdb3f4e3b3e1187",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if config[\"augmentation\"][\"paraphrasing\"][\"enabled\"]:\n",
     "    n_samples = int(max(config[\"augmentation\"][\"paraphrasing\"][\"n_samples\"] * len(data), 1))\n",
@@ -199,9 +229,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3490c1c266f947d0a72bede02cf3a892",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if config[\"augmentation\"][\"style_transfer\"][\"enabled\"]:\n",
     "    n_samples = int(max(config[\"augmentation\"][\"paraphrasing\"][\"n_samples\"] * len(data), 1))\n",
@@ -245,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Tokenizing: 100%|██████████| 10000/10000 [00:12<00:00, 777.97it/s] \n"
+      "Tokenizing: 100%|██████████| 13/13 [00:00<00:00, 7518.75it/s]\n"
      ]
     }
    ],
@@ -310,14 +355,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting features: 100%|██████████| 313/313 [09:49<00:00,  1.88s/it]\n"
+      "Extracting features: 100%|██████████| 1/1 [00:01<00:00,  1.11s/it]\n"
      ]
     }
    ],
@@ -334,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
