Refactor + add Doc Strings

--- a/pipeline/pipeline.ipynb
+++ b/pipeline/pipeline.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
    "source": [
     "data = read_all_datasets()\n",
     "\n",
-    "data = data.head(10)"
+    "data = data.head(10) #TODO Remove"
    ]
   },
   {
@@ -403,7 +403,7 @@
     "                config[\"augmentation\"][\"paraphrasing\"][\"enabled\"],\n",
     "                config[\"augmentation\"][\"style_transfer\"][\"enabled\"]])\n",
     "\n",
-    "np.savez_compressed(f\"output/preprocessed_data{'_augmented' if augmented else ''}.npz\", X=X, y=y)"
+    "np.savez_compressed(f\"{config[\"output\"]}/preprocessed_data{'_augmented' if augmented else ''}.npz\", X=X, y=y)"
    ]
   }
  ],
